<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="tv.bnpbindonesia.app.fragment.HomeFragment">

    <LinearLayout
        android:id="@+id/layout_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <FrameLayout
            android:id="@+id/layout_video"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/black">

            <VideoView
                android:id="@+id/video"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center" />

            <TextView
                android:id="@+id/video_error"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/video_error"
                android:textColor="@android:color/white" />

            <ProgressBar
                android:id="@+id/video_progress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center" />

            <FrameLayout
                android:id="@+id/layout_video_controller"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/video_play"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:adjustViewBounds="true"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:clickable="true"
                    android:src="@drawable/ic_play_arrow_white_48dp"
                    tools:ignore="ContentDescription" />

                <ImageView
                    android:id="@+id/video_pause"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:adjustViewBounds="true"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:clickable="true"
                    android:src="@drawable/ic_pause_white_48dp"
                    tools:ignore="ContentDescription" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:background="@drawable/gradient_up"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/video_current"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="16dp"
                        android:text="@string/time"
                        android:textColor="@android:color/white"
                        android:textSize="12sp"
                        tools:ignore="RtlHardcoded" />

                    <SeekBar
                        android:id="@+id/video_seekbar"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />

                    <TextView
                        android:id="@+id/video_duration"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="16dp"
                        android:text="@string/time"
                        android:textColor="@android:color/white"
                        android:textSize="12sp"
                        tools:ignore="RtlHardcoded" />

                    <ImageView
                        android:id="@+id/video_fullscreen"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="16dp"
                        android:adjustViewBounds="true"
                        android:clickable="true"
                        android:src="@drawable/ic_fullscreen_white_24dp"
                        tools:ignore="ContentDescription" />

                    <ImageView
                        android:id="@+id/video_fullscreen_exit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="16dp"
                        android:adjustViewBounds="true"
                        android:clickable="true"
                        android:src="@drawable/ic_fullscreen_exit_white_24dp"
                        tools:ignore="ContentDescription" />
                </LinearLayout>
            </FrameLayout>
        </FrameLayout>

        <FrameLayout
            android:id="@+id/layout_youtube"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/black">

            <FrameLayout
                android:id="@+id/youtube_player"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </FrameLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/videos"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@color/list_bg"
            android:clipToPadding="false"
            android:padding="4dp" />

        <include layout="@layout/view_share" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:padding="8dp">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:text="@string/loading" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:padding="8dp">

        <TextView
            android:id="@+id/error_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/app_name" />

        <Button
            android:id="@+id/retry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:text="@string/button_retry" />
    </LinearLayout>
</FrameLayout>